// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshots > children 1`] = `
<div>
  Safe
</div>
`;

exports[`snapshots > custom fallback 1`] = `
<div>
  Custom Error
</div>
`;

exports[`snapshots > error fallback 1`] = `
<div
  aria-live="assertive"
  class="flex flex-col items-center justify-center p-6 rounded-xl border border-red-800 bg-red-900/20 text-center gap-4 min-h-[180px]"
  data-boundary-id="unknown"
  role="alert"
>
  <div
    class="w-12 h-12 rounded-full bg-red-100 dark:bg-red-900/40 flex items-center justify-center shrink-0"
  >
    <svg
      aria-hidden="true"
      class="w-6 h-6 text-red-500 dark:text-red-400"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-2.5L13.732 4.5c-.77-.833-2.694-.833-3.464 0L3.34 16.5c-.77.833.192 2.5 1.732 2.5z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
  <div>
    <h2
      class="text-base font-semibold text-gray-100 mb-1"
    >
      This section
       encountered an error
    </h2>
    <p
      class="text-sm text-gray-400"
    >
      Something went wrong rendering this section. Try retrying or go back.
    </p>
  </div>
  <div
    class="flex flex-wrap items-center justify-center gap-2"
  >
    <button
      aria-label="Retry This section"
      class="px-4 py-2 text-sm font-medium rounded-lg bg-cyan-500/10 border border-cyan-500/30 text-cyan-400 hover:bg-cyan-500/20 transition-colors cursor-pointer"
      type="button"
    >
      Retry
    </button>
    <button
      aria-expanded="false"
      aria-label="Toggle error details"
      class="px-4 py-2 text-sm font-medium rounded-lg bg-gray-800 border border-gray-700 text-gray-500 hover:text-gray-300 hover:bg-gray-700 transition-colors cursor-pointer"
      type="button"
    >
      Show details
    </button>
  </div>
</div>
`;
